--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>HAKKIMDA</h1>
-        <p>Merhaba ben Nursema Nakiboglu Ankara'da yaÅŸÄ±yorum. 2021 yilinda Atilim Universitesi Bilgisayar muhendisligi bolumunden mezun oldum. Mezun olduktan sonra savunma sanayide Yapay zeka ve Android ile ugrastim. Sonra IOS alaninda calistim. Daha sonra da kariyerime full stack developer olarak devam ettim.</p>
+        <p>Merhaba ben Nursema Nakiboglu Ankara'da yasiyorum. 2021 yilinda Atilim Universitesi Bilgisayar muhendisligi bolumunden mezun oldum. Mezun olduktan sonra savunma sanayide Yapay zeka ve Android ile ugrastim. Sonra IOS alaninda calistim. Daha sonra da kariyerime full stack developer olarak devam ettim.</p>
         <h2>Calismayi sevdigim teknoloji alanlari</h2>
         <p>IOS - SWIFT</p>
         <p>Frontend - JavaScript - HTML - CSS</p>
