icerikte degisiklik yapildi

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!-- Bu sayfada benim ile ilgili kisaca bilgi edinebilirsiniz -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Nursema NAKIBOGLU</title>
-    </head>
     <body>
-        <h1>HAKKIMDA</h1>
+        <h1>Nursema NAKIBOGLU</h1>
+        <h2>Hakkimda</h2>
         <p>Merhaba ben Nursema Nakiboglu Ankara'da yasiyorum. 2021 yilinda Atilim Universitesi Bilgisayar muhendisligi bolumunden mezun oldum. Mezun olduktan sonra savunma sanayide Yapay zeka ve Android ile ugrastim. Sonra IOS alaninda calistim. Daha sonra da kariyerime full stack developer olarak devam ettim.</p>
-        <h2>Calismayi sevdigim teknoloji alanlari</h2>
+        <h3>Sevdigim teknoloji alanlari</h3>
         <p>IOS - SWIFT</p>
         <p>Frontend - JavaScript - HTML - CSS</p>
         <p>AI</p>
